# AdliMudahele

./: .gitignore  CMakeLists.txt  README.md  calistir.sh  testSenaryosu.py
core/include/: agAnalizi.h  bellekTaramasi.h  kalicilikAnalizi.h  tarayiciAnalizi.h  usbAnalizi.h
core/src/: agAnalizi.cpp  anaMotor.cpp  bellekTaramasi.cpp  kalicilikAnalizi.cpp  tarayiciAnalizi.cpp  usbAnalizi.cpp
gui/: arayuz.py
